--- a/docs/walkthroughs/developing-apbs-locally.adoc
+++ b/docs/walkthroughs/developing-apbs-locally.adoc
@@ -1,104 +1,114 @@
 [[developing-apbs-locally]]
-Developing APBs Locally
------------------------
+= Developing APBs Locally
 
-The document is documenting best practises for the Aerogear APB development! 
-General information about the OpenShift Ansible Broker (OAB) & Ansible Playbook Bundles (APB) can be found link:https://docs.openshift.com/container-platform/3.6/architecture/service_catalog/ansible_service_broker.html[here].
 
-## Installation
+This document outlines best practices for Aerogear APB development.
+General information about the OpenShift Ansible Broker (OAB) and Ansible Playbook Bundles (APB) is included in the link:https://docs.openshift.com/container-platform/3.6/architecture/service_catalog/ansible_service_broker.html[OpenShift docs].
 
-The `apb` CLI can be installed locally, _however_ it is highly recommended using it wrapped in a Linux container. Below is an example on how to create an alias for the _wrapped_`apb` CLI:
+== Installing the apb CLI
+
+The `apb` CLI can be installed locally, however we recommend using it wrapped in a Linux container. To create an alias for the dockerized `apb` CLI:
 
 ....
 alias apb='docker run --rm --privileged -v $PWD:/mnt -v $HOME/.kube:/.kube -v /var/run/docker.sock:/var/run/docker.sock -u $UID docker.io/ansibleplaybookbundle/apb-tools'
 ....
 
 
-## Creating an APB
+== Creating an APB
 
-There is a link:https://github.com/ansibleplaybookbundle/ansible-playbook-bundle/blob/master/docs/getting_started.md[great tutorial] on how to write ABPs, it's highly recommended going through that!
+We recommend following the link:https://github.com/ansibleplaybookbundle/ansible-playbook-bundle/blob/master/docs/getting_started.md[tutorial] on how to write ABPs.
 
-To create new `APB` module execute:
+To create a `APB` module:
 
 ....
 apb init
 ....
 
-_NOTE:_ It's a good practise to have the APB end with `-apb`!
+NOTE: Best practice is to name the APB ending with `-apb`.
 
-### Build
+=== Building an APB
 
-To build `APB` execute
+To build an APB:
 
 ....
 make apb_build
 ....
 
-### Pushing to Dockerhub
+=== Pushing to Dockerhub
 
-If you want to push the `APB` to your own Dockerhub account, run the following, to run a _complete_ build:
+If you want to push the APB to your own Dockerhub account:
 
 ....
 make DOCKERORG="my_org" docker_push
 ....
 
-_NOTE:_ With `DOCKERHOST` you can also override the dockerhost; default is `docker.io`.
+NOTE: Set `DOCKERHOST` to override the dockerhost default, which is `docker.io`.
 
-### Locally pushing APBs to OpenShift Ansible Broker (OAB)
+=== Pushing APBs to OpenShift Ansible Broker (OAB) locally
 
-#### Setup of MCP
-
-Create a MCP cluster pointing at *your* own docker organisation, this will also copy all the existing APBs in aerogear to the dockerhub_org:
+. Create a MCP cluster pointing at *your* own docker organisation:
++
 ....
 ansible-playbook playbook.yml -e "dockerhub_username=<dockerusername>" -e "dockerhub_password=<dockerpassword>" -e "dockerhub_org=<USE_THIS_VALUE>" -e "apb_sync=true" --ask-become-pass
 ....
++
+[NOTE]
+====
+* This copies all the existing APBs in aerogear to the `dockerhub_org` registry.
 
-*Note* - `apb_sync=true` will push all aerogear catalog to your dockerhub account.
-*Note* - developers can also use aerogearcatalog organization and openshift local registry for development.
+* Setting `apb_sync=true` pushs all the aerogear catalog to your dockerhub account.
 
-#### Push to ASB
+* Developers can use aerogearcatalog organization and openshift local registry for development.
+====
 
-Once you have issued the (local) build, you can push your ABP to the running ASB of your MCP project:
+. Make the APB:
++
+....
+make apb_build
+....
 
+. Push your ABP to the running ASB of your MCP project:
++
 ....
 make apb_push
 ....
++
+Afterwards your APB is available from the _Service Catalog_.
 
-Afterwards your APB is ready to be used from the _Service Catalog_.
+[NOTE]
+====
+* When pushing apb it will not be available immediately. 
 
-*Note* - When pushing apb it will not be available immediately. 
+* Using `make build_and_push` executes all phases at once.
+====
 
-*Note* - `make build_and_push` will execute all phases at once.
+== Debugging an APB 
 
-## Best Practises
+When you run an `APB` a temporary namespace is created where a pod is created to run the provision process. By default that namespace is deleted when provisioning is complete.
 
-### Debuging APB 
-
-When you run an `APB` a temporary namespace is created where a pod is created to run the provision process. By default namespace will be deleted as soon as provisioning is complete.
-
-If you want to review logs in namespace after provisioning please set following parameters for `broker-config`
+If you want to review logs in that namespace after provisioning, set the following parameters for `broker-config`
 `keep_namespace_on_error="true"` or `keep_namespace="true"`
 
-### Bootstrap APB
+== Bootstrapping an APB
 
-When configuring ansible broker to user our docker organization
-you can force broker to reload images from your org.
+When configuring the ansible broker
+you can force the broker to reload images from your org.
 
-```
+----
 apb bootstrap
-```
+----
 
-### Pushing APB locally
+== Pushing APBs locally
 
-For testing purposes developers may save time by building and using internal openshift registry.
-To publish ABP to local OpenShift registry execute:
+For testing purposes developers may save time by building and using the internal openshift registry.
+To publish the ABP to the local OpenShift registry:
 
-```
+----
 apb prepare
 apb push -o 
-```
+----
 
-### Mobile-Service Tag
+== Using the mobile-service tag
 
 For MCP enabled _APBs_, make sure we have a `mobile-service` tag inside the `apb.yml` file:
 
@@ -108,7 +118,7 @@ tags:
   - mobile-service
 ....
 
-### ServiceName label
+== Using the servicename label
 
 Inside of the `apb.yml` file, make sure you use the `serviceName:` label, like:
 
@@ -121,9 +131,9 @@ metadata:
 ...
 ....
 
-## Testing
+== Testing an APB
 
-There are currently not much tools for testing. The APB team has a few open Github issues and proposals:
+Currently, there are not many tools for testing. The APB team has a few open Github issues and proposals:
 
 * link:https://github.com/ansibleplaybookbundle/ansible-playbook-bundle/issues/131[lint command for APB content]
 * link:https://github.com/ansibleplaybookbundle/ansible-playbook-bundle/blob/master/docs/proposals/testing.md[CI and Image tests]
